--- a/index.html
+++ b/index.html
@@ -5,29 +5,55 @@
         <link rel="stylesheet" href="./index.css">
     </head>
     <body>
-        <div class="App">
-            <section>
-                <div class="container">
-                    <img src='./assets/Hero - Desktop.jpg' width=1440 height=847 class="hero-img" alt="hero-img"/>    
-                    <div class="hero-headline"> 
-                        <h1> Primary Headline </h1>
-                        <p> Sub-text, sub copy here. Descriptive of <br>
-                            value proposition, action-oriented, and <br>
-                            keyword-rich.
-                        </p>
-                        <p>
-                            Get the details
-                        </p>  
-                        <div class="box">
-                            <i class="fa fa-search"></i>
-                            <input type="text" placeholder="Search">
-                        </div>
-                        <h1>
-                            Explore <span style="color:rgb(230, 28, 220)">offers</span> from our featured partners
-                        </h1>
+        <section class="hero-searchbar">
+            <img class="hero-img" src="./assets/Hero - Desktop.jpg" width=1440 height=847 alt="hero-img"/>
+            <div class="hero-container">
+                <h1> Primary Headline </h1>
+                <p> Sub-text, sub copy here. Descriptive of <br>
+                    value proposition, action-oriented, and <br> 
+                    keyword-rich. </p>
+                <p> Get the details </p>
+                <div class="search-container">
+                    <i class="fa fa-search"></i>
+                    <input type="text" placeholder="Search" >
+                </div>
+                <h2> Explore <span style="color:rgb(230, 28, 220)"> offers </span> from our featured partners </h2>
+            </div>
+        </section>
+        <section class="hero-offer-tiles">
+            <div class="flex-container">
+                <div>
+                    <img src="./assets/Image Frame2.png" width=321 height=180 alt="frame2"/>
+                    <h3 style="font-size: 24px; font-weight: bold"> Partner 2 </h3>
+                    <div class="icon-heading">
+                        <i class="fa fa-light fa-percent fa-lg" style="color: #e61cdc; margin-top: 3px"></i>
+                        <span style="font-size:20px; font-weight:normal; padding-left: 20px;">3 Offers available</span>
                     </div>
                 </div>
-            </section>
-          </div>
+                <div>
+                    <img src="./assets/Image Frame1.png" width=321 height=180 alt="frame1"/>
+                    <h3 style="font-size: 24px; font-weight: bold"> Partner 1 </h3>
+                    <div class="icon-heading">
+                        <i class="fa fa-light fa-percent fa-lg" style="color: #e61cdc; margin-top: 3px"></i>
+                        <span style="font-size:20px; font-weight:normal; padding-left: 20px;">3 Offers available</span>
+                    </div>
+                <div>
+                    <img src="./assets/Image Frame3.png" width=321 height=180 alt="frame3"/>
+                    <h3 style="font-size: 24px; font-weight: bold"> Partner 3 </h3>
+                    <div class="icon-heading">
+                        <i class="fa fa-light fa-percent fa-lg" style="color: #e61cdc; margin-top: 3px"></i>
+                        <span style="font-size:20px; font-weight:normal; padding-left: 20px;">2 Offers available</span>
+                     </div>
+                <div>
+                    <img src="./assets/Image Frame4.png" width=321 height=180 alt="frame4"/>
+                    <h3 style="font-size: 24px; font-weight: bold"> Partner 4 </h3>
+                    <div class="icon-heading">
+                        <i class="fa fa-light fa-percent fa-lg" style="color: #e61cdc; margin-top: 3px"></i>
+                        <span style="font-size:20px; font-weight:normal; padding-left: 20px;">1 Offers available</span>
+                    </div>
+            </div>
+            <p style="font-size: 20px; text-align: right; padding: 30px"> View all deals and offers <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span></p>
+        </section>
+
     </body>
 </html>
