removed position attributes and added meta tag

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <meta
+        name="viewport"
+        content ="width=device-width, initial-scale=1"
+    >
     <head>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="./index.css">
@@ -20,36 +24,39 @@
                 <h2 class="offer-text"> Explore <span style="color:rgb(230, 28, 220)"> offers </span> from our featured partners </h2>
             </div>
             <div class="flex-container">
-                <div class="flex-child">
-                    <img src="./assets/Image Frame1.png" width=321 height=180 alt="frame1"/>
-                    <h3 style="font-size: 24px; font-weight: bold"> Partner 1 </h3>
-                    <div class="icon-heading">
-                        <i class="fa fa-light fa-percent fa-lg" style="color: #e61cdc; margin-top: 3px"></i>
-                        <span style="font-size:20px; font-weight:normal; padding-left: 20px;">3 Offers available</span>
+                <div class="flex-children-container">
+                    <div class="flex-child">
+                        <img src="./assets/Image Frame1.png" width=321 height=180 alt="frame1"/>
+                        <h3 style="font-size: 24px; font-weight: bold"> Partner 1 </h3>
+                        <div class="icon-heading">
+                            <i class="fa fa-light fa-percent fa-lg" style="color: #e61cdc; margin-top: 3px"></i>
+                            <span style="font-size:20px; font-weight:normal; padding-left: 20px;">3 Offers available</span>
+                        </div>
                     </div>
-                </div>
-                <div class="flex-child">
-                    <img src="./assets/Image Frame2.png" width=321 height=180 alt="frame2"/>
-                    <h3 style="font-size: 24px; font-weight: bold"> Partner 2 </h3>
-                    <div class="icon-heading">
-                        <i class="fa fa-light fa-percent fa-lg" style="color: #e61cdc; margin-top: 3px"></i>
-                        <span style="font-size:20px; font-weight:normal; padding-left: 20px;">3 Offers available</span>
+                    <div class="flex-child">
+                        <img src="./assets/Image Frame2.png" width=321 height=180 alt="frame2"/>
+                        <h3 style="font-size: 24px; font-weight: bold"> Partner 2 </h3>
+                        <div class="icon-heading">
+                            <i class="fa fa-light fa-percent fa-lg" style="color: #e61cdc; margin-top: 3px"></i>
+                            <span style="font-size:20px; font-weight:normal; padding-left: 20px;">3 Offers available</span>
+                        </div>
                     </div>
-                </div>
-                <div class="flex-child">
-                    <img src="./assets/Image Frame3.png" width=321 height=180 alt="frame3"/>
-                    <h3 style="font-size: 24px; font-weight: bold"> Partner 3 </h3>
-                    <div class="icon-heading">
-                        <i class="fa fa-light fa-percent fa-lg" style="color: #e61cdc; margin-top: 3px"></i>
-                        <span style="font-size:20px; font-weight:normal; padding-left: 20px;">2 Offers available</span>
+                    <div class="flex-child">
+                        <img src="./assets/Image Frame3.png" width=321 height=180 alt="frame3"/>
+                        <h3 style="font-size: 24px; font-weight: bold"> Partner 3 </h3>
+                        <div class="icon-heading">
+                            <i class="fa fa-light fa-percent fa-lg" style="color: #e61cdc; margin-top: 3px"></i>
+                            <span style="font-size:20px; font-weight:normal; padding-left: 20px;">2 Offers available</span>
+                        </div>
                     </div>
-                </div>
-                <div class="flex-child">
-                    <img src="./assets/Image Frame4.png" width=321 height=180 alt="frame4"/>
-                    <h3 style="font-size: 24px; font-weight: bold"> Partner 4 </h3>
-                    <div class="icon-heading">
-                        <i class="fa fa-light fa-percent fa-lg" style="color: #e61cdc; margin-top: 3px"></i>
-                        <span style="font-size:20px; font-weight:normal; padding-left: 20px;">1 Offers available</span>
+                    <div class="flex-child">
+                        <img src="./assets/Image Frame4.png" width=321 height=180 alt="frame4"/>
+                        <h3 style="font-size: 24px; font-weight: bold"> Partner 4 </h3>
+                        <div class="icon-heading">
+                            <i class="fa fa-light fa-percent fa-lg" style="color: #e61cdc; margin-top: 3px"></i>
+                            <span style="font-size:20px; font-weight:normal; padding-left: 20px;">1 Offers available</span>
+                    </div>
+    
                 </div>
             </div>
             <p class="deals-text" style="color: rgb(61, 61, 61); white-space: nowrap; position: absolute; font-size: 20px; text-align: right; left: 50%; bottom: 0; margin-left: 30px; margin-top: 40px;"> View all deals and offers <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span></p>
