removed absolute position

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
     </head>
     <body>
         <section class="hero-searchbar">
-            <img class="hero-img" src="./assets/Hero - Desktop.jpg" width=1440 height=847 alt="hero-img"/>
             <div class="hero-container">
-                <h1> Primary Headline </h1>
-                <p> Sub-text, sub copy here. Descriptive of <br>
-                    value proposition, action-oriented, and <br> 
-                    keyword-rich. </p>
-                <p> Get the details </p>
-                <div class="search-container">
-                    <i class="fa fa-search"></i>
-                    <input type="text" placeholder="Search" >
+                <div class="hero-headers">
+                    <h1> Primary Headline </h1>
+                    <p> Sub-text, sub copy here. Descriptive of <br>
+                        value proposition, action-oriented, and <br> 
+                        keyword-rich. </p>
+                    <p> Get the details </p>
+                    <div class="search-container">
+                        <i class="fa fa-search"></i>
+                        <input type="text" placeholder="Search" >
+                    </div>
+                    <h2 class="offer-text"> Explore <span style="color:rgb(230, 28, 220)"> offers </span> from our featured partners </h2>
                 </div>
-                <h2 class="offer-text"> Explore <span style="color:rgb(230, 28, 220)"> offers </span> from our featured partners </h2>
             </div>
             <div class="flex-container">
                 <div class="flex-children-container">
@@ -55,11 +56,11 @@
                         <div class="icon-heading">
                             <i class="fa fa-light fa-percent fa-lg" style="color: #e61cdc; margin-top: 3px"></i>
                             <span style="font-size:20px; font-weight:normal; padding-left: 20px;">1 Offers available</span>
+                        </div>
                     </div>
-    
                 </div>
             </div>
-            <p class="deals-text" style="color: rgb(61, 61, 61); white-space: nowrap; position: absolute; font-size: 20px; text-align: right; left: 50%; bottom: 0; margin-left: 30px; margin-top: 40px;"> View all deals and offers <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span></p>
+            <p class="deals-text" style="color: rgb(61, 61, 61); white-space: nowrap; font-size: 20px; text-align: right; margin-left: 30px; margin-top: 40px;"> View all deals and offers <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span></p>
         </section>
         
     </body>
